WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232900
[WebAuthn] User handle is not saved on create calls via ASC
https://bugs.webkit.org/show_bug.cgi?id=232900
Summary
[WebAuthn] User handle is not saved on create calls via ASC
pascoe@apple.com
Reported
2021-11-09 13:05:14 PST
rdar://85216105
Attachments
Patch
(2.20 KB, patch)
2021-11-09 13:08 PST
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2021-11-09 13:06:26 PST
This value is stored as idVector after ipc, therefore is not getting set on creation calls via ASC. Relying parties expect this value to be saved and for it to be returned in subsequent gets on the credential.
pascoe@apple.com
Comment 2
2021-11-09 13:08:53 PST
Created
attachment 443718
[details]
Patch
Brent Fulgham
Comment 3
2021-11-09 13:45:43 PST
Comment on
attachment 443718
[details]
Patch r=me
EWS
Comment 4
2021-11-09 13:47:24 PST
j_pascoe@apple.com
does not have committer permissions according to
https://raw.githubusercontent.com/WebKit/WebKit/main/metadata/contributors.json
. Rejecting
attachment 443718
[details]
from commit queue.
EWS
Comment 5
2021-11-09 15:02:39 PST
Committed
r285537
(
244054@main
): <
https://commits.webkit.org/244054@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443718
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug